2012-11-03  Peter Bergner  <bergner@vnet.ibm.com>

	Backport from mainline
	2012-10-31  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/53708
	* tree-vect-data-refs.c (vect_can_force_dr_alignment_p): Preserve
	user-supplied alignment when used with an explicit section name.

2012-11-02  Jeff Law  <law@redhat.com>

	PR tree-optimization/54985
	* tree-ssa-threadedge.c (cond_arg_set_in_bb): New function extracted
	from thread_across_edge.
	(thread_across_edge): Use it in all cases where we might thread
	across a back edge.

2012-10-31  Eric Botcazou  <ebotcazou@adacore.com>

	* config/i386/i386.c (ix86_expand_prologue): Emit frame info for the
	special register pushes before frame probing and allocation.

2012-10-31  Ralf Corsépius  <ralf.corsepius@rtems.org>,
	    Joel Sherrill  <joel.sherrill@oarcorp.com>

	* config/sparc/t-rtems: New (Custom multilibs).
	* config/sparc/t-rtems-64: New (Custom multilibs).
	* config.gcc (sparc64-*-rtems*): Add sparc/t-rtems-64.
	(sparc-*-rtems*): Add sparc/t-rtems.

2012-10-30  Eric Botcazou  <ebotcazou@adacore.com>

	* cse.c (hash_rtx_cb): Replace RTX_UNCHANGING_P with MEM_READONLY_P in
	head comment.
	(hash_rtx): Likewise.

2012-10-29  Terry Guo  <terry.guo@arm.com>

	Backport from mainline
	2012-10-11  Terry Guo  <terry.guo@arm.com>

	* config/arm/arm.c (arm_arch6m): New variable to denote armv6-m
	architecture.
	* config/arm/arm.h (TARGET_HAVE_DMB): The armv6-m also has DMB
	instruction.

2012-10-26  Gunther Nikl  <gnikl@users.sourceforge.net>

	* common/config/m68k/m68k-common.c (m68k_handle_option): Set
	gcc_options fields of opts_set for -m68020-40 and -m68020-60.

2012-10-26  Ralf Corsépius  <ralf.corsepius@rtems.org>

	* config/avr/t-rtems: Revert previous commit.

2012-10-26  Terry Guo  <terry.guo@arm.com>

	Backport from mainline
	2012-10-23  Terry Guo  <terry.guo@arm.com>

	PR target/55019
	* config/arm/arm.c (thumb1_expand_prologue): Don't push high regs with
	live argument regs.
