@@ -1,3 +1,7 @@
+2012-11-07  Yufeng Zhang  <yufeng.zhang@arm.com>
+
+	* gcc.target/aarch64/dwarf-cfa-reg.c: New test.
+
 2012-11-02  Jeff Law  <law@redhat.com>
 
 	* gcc.c-torture/execute/pr54985.c: New test.
